# audio-whisper-lyrics-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  bootstrap  docker-compose.yml  manage  pyproject.toml
audio_jax_whisper/: app.py  cli.py  config.py  custom_transcribe.py  gunicorn-conf.py  tasks.py  utils.py  web.py  wsgi.py
docker/: docker-compose.yml
secrets/: dev-env
