[tool.poetry]
name = "audio-jax-whisper"
version = "0.1.0"
description = ""
authors = ["yusril <yusril@nubela.co>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
cached-property = "^1.5.2"
llvmlite = "^0.40.1"
numba = "^0.57.1"
flask = "^2.3.2"
gevent = "^23.7.0"
gunicorn = "^20.1.0"
celery = "^5.3.1"
redis = "^4.6.0"
requests = "^2.31.0"
flower = "^2.0.0"
boto3 = "^1.28.2"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
setuptools-rust = "^1.6.0"
setuptools = "^68.0.0"
wheel = "^0.40.0"

[tool.poetry.extras]
release = ["gunicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
